# opslib

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  Readme.md  pyproject.toml
.github/workflows/: ci.yml
docs/: api.rst  cli.rst  components.rst  conf.py  contributing.rst  getting-started.rst  index.rst  installation.rst  stack.rst
docs/_static/: custom.css
docs/batteries/: ansible.rst  index.rst  places.rst  terraform.rst
docs/tutorial/: cloud.rst  index.rst  layout.rst  local.rst  vps.rst
examples/: .gitignore
examples/cloudflare/: .gitignore  Readme.md  stack.py
examples/compose/: .gitignore  Dockerfile  Readme.md  nginx.conf  stack.py
examples/docs/: apartment.py  props.py  sequence.py
examples/docs/ansible/: stack.py
examples/docs/getting-started/: stack.py
examples/docs/simple/: stack.py
examples/mailu/: .gitignore  Readme.md
examples/mailu/stack/: __init__.py  backups.py  cloudflare.py  dns.py  hetzner.py  mailu.py  tokens.py
examples/restic/: .gitignore  Readme.md  stack.py
examples/shared_ssh/: stack.py
examples/tailscale/: .gitignore  Readme.md  stack.py
examples/tutorial/: .gitignore  .isort.cfg  Readme.md  cloudflare.py  gitea.py  hetzner.py  stack.py
examples/tutorial-minimal/: .gitignore  Readme.md  stack.py
examples/tutorial/stack/: __init__.py  gitea.py  hetzner.py
examples/vps/: .gitignore  stack.py
opslib/: __init__.py  ansible.py  callbacks.py  cli.py  components.py  lazy.py  local.py  operations.py  places.py  props.py  results.py  state.py  terraform.py  things.py  uptodate.py  utils.py
opslib/extras/: http.py  restic.py  systemd.py  tailscale.py
tests/: conftest.py  test_ansible.py  test_cli.py  test_components.py  test_json_state.py  test_lazy.py  test_local.py  test_operations.py  test_places.py  test_printer.py  test_props.py  test_restic.py  test_run_after.py  test_ssh.py  test_statedir.py  test_systemd.py  test_terraform.py  test_things.py  test_uptodate.py
tests/container/: .gitignore  Containerfile
tests/sshd-container/: Dockerfile  ssh_host_ed25519_key  ssh_host_ed25519_key.pub
