[tool.poetry]
name = "opslib"
version = "0.0.1"
description = "A Pythonic toolkit to manage infrastructure."
authors = ["Alex Morega <alex@grep.ro>"]
license = "MIT"
readme = "Readme.md"

[tool.poetry.dependencies]
python = "^3.9"
beartype = "^0.12.0"
click = "^8.1.3"
ansible-core = "^2.14.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pytest-black-ng = "^0.4.1"
pytest-isort = "^3.1.0"

[tool.poetry.scripts]
opslib = "opslib.cli:main"

[tool.pytest.ini_options]
addopts = "--black --isort"
filterwarnings = [
  "error",
  "ignore::pytest.PytestUnraisableExceptionWarning",
]
log_level = "DEBUG"
markers = [
  "slow: marks tests as slow",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
