[tool.poetry]
name = "pyopslib"
version = "0.0.3"
description = "A Pythonic toolkit to manage infrastructure."
authors = ["Alex Morega <alex@grep.ro>"]
license = "MIT"
readme = "Readme.md"
packages = [
  { include = "opslib" },
]

[tool.poetry.dependencies]
python = "^3.9"
beartype = "^0.12.0"
click = "^8.1.3"
ansible-core = "^2.14.3"
requests = "^2.28.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pytest-black-ng = "^0.4.1"
pytest-isort = "^3.1.0"
sphinx = "^6.1.3"
sphinx-autobuild = "^2021.3.14"

[tool.poetry.scripts]
opslib = "opslib.cli:main"

[tool.pytest.ini_options]
addopts = "--black --isort"
log_level = "DEBUG"
markers = [
  "slow: marks tests as slow",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
