[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pyopslib"
authors = [{name = "Alex Morega", email = "alex@grep.ro"}]
dynamic = ["version", "description"]
license = {file = "LICENSE"}
readme = "Readme.md"
requires-python = ">=3.12"
dependencies = [
    "ansible-core>=2.14.3,<2.15",
    "beartype>=0.12.0",
    "click>=8.1.3",
    "requests>=2.28.2",
]

[project.optional-dependencies]
dev = [
    "flit>=3.2,<4",
    "keyring>=24.3.0",
    "pyright>=1.1.337",
    "pytest-black-ng>=0.4.1",
    "pytest-isort>=3.1.0",
    "pytest>=7.2.2",
    "sphinx-autobuild>=2021.3.14",
    "sphinx>=6.1.3",
]

[project.scripts]
opslib = "opslib.cli:main"

[tool.flit.module]
name = "opslib"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "--black --isort --ignore examples"
log_level = "DEBUG"
markers = [
  "slow: marks tests as slow",
]
